# emulsion-suite

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/example-app/: FAQ.md  main.py  package.json  tsconfig.json  vite.config.ts
apps/example-app/islands/: AddToCart.tsx  Counter.tsx  ReviewCarousel.tsx  index.ts
apps/example-app/src/: main.ts
apps/example-app/static/css/: global.css
apps/example-app/templates/: base.html  home.html  product.html
extensions/emulsion-export/: pyproject.toml
extensions/emulsion-export/src/emulsion_export/: __init__.py  exporter.py  extension.py
extensions/emulsion-siteswan/: pyproject.toml
extensions/emulsion-siteswan/src/emulsion_siteswan/: __init__.py  extension.py  importer.py
