[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emulsion-export"
version = "0.1.0"
description = "Website template exporter extension for Emulsion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "emulsion>=0.1.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emulsion_export"]
