[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emulsion-siteswan"
version = "0.1.0"
description = "SiteSwan website importer extension for Emulsion"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "emulsion>=0.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emulsion_siteswan"]
